# AdventOfCode

./: aoc_get  aoc_submit  aoc_util.py  requirements.txt
2020/Day1/Part1/: solution.py
2020/Day1/Part2/: solution.py
2020/Day10/Part1/: solution.py
2020/Day10/Part2/: solution.py
2020/Day11/Part1/: solution.py
2020/Day11/Part2/: solution.py
2020/Day12/Part1/: solution.py
2020/Day12/Part2/: solution.py
2020/Day13/Part1/: solution.py
2020/Day13/Part2/: solution.py
2020/Day14/Part1/: solution.py
2020/Day14/Part2/: solution.py
2020/Day15/Part1/: solution.py
2020/Day15/Part2/: solution.py
2020/Day16/Part1/: solution.py
2020/Day16/Part2/: solution.py
2020/Day17/Part1/: solution.py
2020/Day17/Part2/: solution.py
2020/Day18/Part1/: solution.py
2020/Day18/Part2/: solution.py
2020/Day19/Part2/: solution.py
2020/Day2/Part1/: solution.py
2020/Day2/Part2/: solution.py
2020/Day3/Part1/: solution.py
2020/Day3/Part2/: solution.py
2020/Day4/Part1/: solution.py
2020/Day4/Part2/: solution.py
2021/Day1/: Day 1.ipynb  Day1.jl  Day1.jl.html
2021/Day11/: Day11.ipynb
2021/Day12/: Day12.ipynb
2021/Day13/: Day13.ipynb
2021/Day14/: Day14.ipynb
2021/Day15/: Day15.ipynb
2021/Day2/: Day2.ipynb  Day2.jl
2021/Day3/: Day3.ipynb  Day3.jl
2021/Day4/: Day4.ipynb
2021/Day5/: Day5.ipynb
2021/Day7/: Day7.ipynb
2021/Day9/: Day9.ipynb
2022/aoc_2022/: Cargo.toml
2022/aoc_2022/src/day_1/: main.rs
2023/1/: part_1  part_2  solution  solution.py
2023/2/: part_2  solution.py
2023/3/: solution.py
2023/4/: part_1  part_2  solution.py
(+15 files in other folders)
