[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day_1"
path = "src/bin/day_1/main.rs"

[[bin]]
name = "day_2_1"
path = "src/bin/day_2/part_1.rs"

[[bin]]
name = "day_2_2"
path = "src/bin/day_2/part_2.rs"

[[bin]]
name = "day_3_1"
path = "src/bin/day_3/part_1.rs"

[[bin]]
name = "day_3_2"
path = "src/bin/day_3/part_2.rs"

[[bin]]
name = "day_4"
path = "src/bin/day_4/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
